# poster

./: README.md  pyproject.toml
examples/: simple.py
poster/: __init__.py  cli.py  core.py  launcher.py  synchronize.py
poster/callbacks/: __init__.py  aim_callback.py  callback.py  debug_callback.py  fire_callback.py  hydra_callback.py  hydra_zen_callback.py  submitit_callback.py  wandb_callback.py
src/callbacks/: hydra_callback.py
